// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`iterateKeyValuesFromReadStream should iterate correctly 1`] = `
[
  {
    "keys": [
      "key",
      "ke"y2",
      "key3",
    ],
    "value": "val\ue3",
  },
  {
    "keys": [
      "key4",
      "none",
    ],
    "value": "none",
  },
  {
    "keys": [
      "key4",
    ],
    "value": "value4",
  },
  {
    "keys": [
      "key5",
      "key\n{6}",
    ],
    "value": "val\tue{6}",
  },
  {
    "keys": [
      "key5",
      "key7",
      "key8",
    ],
    "value": "value8",
  },
  {
    "keys": [
      "key5",
      "key7",
      "key8",
      "key9",
    ],
    "value": "value9",
  },
  {
    "keys": [
      "key5",
      "key9",
    ],
    "value": "value9",
  },
]
`;

exports[`iterateKeyValuesFromFile should iterate correctly 1`] = `
[
  {
    "keys": [
      "key",
      "ke"y2",
      "key3",
    ],
    "value": "val\ue3",
  },
  {
    "keys": [
      "key4",
      "none",
    ],
    "value": "none",
  },
  {
    "keys": [
      "key4",
    ],
    "value": "value4",
  },
  {
    "keys": [
      "key5",
      "key\n{6}",
    ],
    "value": "val\tue{6}",
  },
  {
    "keys": [
      "key5",
      "key7",
      "key8",
    ],
    "value": "value8",
  },
  {
    "keys": [
      "key5",
      "key7",
      "key8",
      "key9",
    ],
    "value": "value9",
  },
  {
    "keys": [
      "key5",
      "key9",
    ],
    "value": "value9",
  },
  {
    "keys": [
      "key5",
      "你好",
    ],
    "value": "世界",
  },
]
`;
